[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Misc/White_Pixel.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Power_Ups/Pick_Up_11_Balloon.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Power_Ups/Pick-Up-11-Balloon.gd" type="Script" id=3]
[ext_resource path="res://Scenes/FX/Balloon_pop_01.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Power_Ups/parts/11-01-Balloon_Body.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.0
height = 40.0

[sub_resource type="PhysicsMaterial" id=7]
friction = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.0
height = 6.0

[node name="Pick-Up-11-Balloon" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
mass = 0.1
gravity_scale = 5.0
linear_damp = 1.0
script = ExtResource( 3 )
popped = ExtResource( 4 )
color_01 = Color( 1, 0, 0, 1 )
color_02 = Color( 0, 0, 1, 1 )
color_03 = Color( 0, 1, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -22 )
shape = SubResource( 6 )

[node name="Balloon_Body" type="RigidBody2D" parent="." groups=[
"hittable",
]]
position = Vector2( 0, -73 )
collision_layer = 512
collision_mask = 512
mass = 0.5
physics_material_override = SubResource( 7 )
gravity_scale = -11.0
can_sleep = false
linear_damp = 4.0
angular_damp = 50.0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balloon_Body"]
shape = SubResource( 2 )

[node name="Balloon" type="Sprite" parent="Balloon_Body/CollisionShape2D"]
show_behind_parent = true
position = Vector2( 0, 3 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="PinJoint2D7" type="PinJoint2D" parent="."]
position = Vector2( 0, -58 )
node_a = NodePath("../Balloon_Body")
node_b = NodePath("../RigidBody2D")
disable_collision = false

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 0, -52 )
collision_layer = 0
collision_mask = 0
mass = 0.102041
linear_damp = 1.0
angular_damp = 7.0
applied_force = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="White_Pixel" type="Sprite" parent="RigidBody2D/CollisionShape2D"]
scale = Vector2( 2, 12 )
texture = ExtResource( 1 )

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 0, -51 )
node_a = NodePath("../RigidBody2D")
node_b = NodePath("../RigidBody2D2")
disable_collision = false

[node name="RigidBody2D2" type="RigidBody2D" parent="."]
position = Vector2( 0, -44 )
collision_layer = 0
collision_mask = 0
mass = 0.102041
linear_damp = 1.0
angular_damp = 7.0
applied_force = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="White_Pixel" type="Sprite" parent="RigidBody2D2/CollisionShape2D"]
scale = Vector2( 2, 12 )
texture = ExtResource( 1 )

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2( 0, -43 )
node_a = NodePath("../RigidBody2D2")
node_b = NodePath("../RigidBody2D3")
disable_collision = false

[node name="RigidBody2D3" type="RigidBody2D" parent="."]
position = Vector2( 0, -36 )
collision_layer = 0
collision_mask = 0
mass = 0.102041
linear_damp = 1.0
angular_damp = 7.0
applied_force = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D3"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="White_Pixel" type="Sprite" parent="RigidBody2D3/CollisionShape2D"]
scale = Vector2( 2, 12 )
texture = ExtResource( 1 )

[node name="PinJoint2D3" type="PinJoint2D" parent="."]
position = Vector2( 0, -35 )
node_a = NodePath("../RigidBody2D3")
node_b = NodePath("../RigidBody2D4")
disable_collision = false

[node name="RigidBody2D4" type="RigidBody2D" parent="."]
position = Vector2( 0, -28 )
collision_layer = 0
collision_mask = 0
mass = 0.102041
linear_damp = 1.0
angular_damp = 7.0
applied_force = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D4"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="White_Pixel" type="Sprite" parent="RigidBody2D4/CollisionShape2D"]
scale = Vector2( 2, 12 )
texture = ExtResource( 1 )

[node name="PinJoint2D4" type="PinJoint2D" parent="."]
position = Vector2( 0, -27 )
node_a = NodePath("../RigidBody2D4")
node_b = NodePath("../RigidBody2D5")
disable_collision = false

[node name="RigidBody2D5" type="RigidBody2D" parent="."]
position = Vector2( 0, -20 )
collision_layer = 0
collision_mask = 0
mass = 0.102041
linear_damp = 1.0
angular_damp = 7.0
applied_force = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D5"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="White_Pixel" type="Sprite" parent="RigidBody2D5/CollisionShape2D"]
scale = Vector2( 2, 12 )
texture = ExtResource( 1 )

[node name="PinJoint2D5" type="PinJoint2D" parent="."]
position = Vector2( 0, -19 )
node_a = NodePath("../RigidBody2D5")
node_b = NodePath("../RigidBody2D6")
disable_collision = false

[node name="RigidBody2D6" type="RigidBody2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 0
collision_mask = 0
linear_damp = 1.0
angular_damp = 7.0
applied_force = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D6"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="White_Pixel" type="Sprite" parent="RigidBody2D6/CollisionShape2D"]
scale = Vector2( 2, 12 )
texture = ExtResource( 1 )

[node name="PinJoint2D6" type="PinJoint2D" parent="."]
position = Vector2( 0, -11 )
node_a = NodePath("../RigidBody2D6")
node_b = NodePath("../RigidBody2D7")
disable_collision = false

[node name="RigidBody2D7" type="RigidBody2D" parent="."]
position = Vector2( 0, -4 )
collision_layer = 0
collision_mask = 0
linear_damp = 1.0
angular_damp = 7.0
applied_force = Vector2( 0, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D7"]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="White_Pixel" type="Sprite" parent="RigidBody2D7/CollisionShape2D"]
scale = Vector2( 2, 12 )
texture = ExtResource( 1 )

[node name="PinJoint2D8" type="PinJoint2D" parent="."]
node_a = NodePath("../RigidBody2D7")
node_b = NodePath("..")
disable_collision = false

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
